Fix container width on mobile

--- a/style.css
+++ b/style.css
@@ -238,6 +238,6 @@ body {
     }
 
     .container {
-        width: 50%;
+        width: 65%;
     }
 }
